--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,8 @@
 # top-most EditorConfig file
 root = true
 
+
+
 [*]
 indent_style = space
 indent_size = 4
@@ -10,3 +12,6 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
+
+[*.{yml, yaml, json}]
+indent_size = 2
