--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "@adaosantos/pulumi-crds-traefik",
-  "version": "",
-  "scripts": {
-    "build": "tsc",
-    "install": "node scripts/install-pulumi-plugin.js resource crds "
-  },
-  "dependencies": {
-    "@pulumi/pulumi": "^3.42.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14",
-    "typescript": "^4.3.5"
-  },
-  "pulumi": {
-    "resource": true,
-    "name": "crds"
-  }
+    "name": "@adaosantos/pulumi-crds-traefik",
+    "version": "0.0.1",
+    "scripts": {
+        "build": "tsc"
+    },
+    "dependencies": {
+        "@pulumi/pulumi": "^3.42.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14",
+        "typescript": "^4.3.5"
+    },
+    "pulumi": {
+        "resource": true,
+        "name": "crds"
+    }
 }
