--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: release
 on:
   push:
-    tags:
-      - v*.*.*
+    branches:
+      - main
 jobs:
   publish_package:
     name: Publish SDKs
