--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@adaosantos/pulumi-kubernetes-traefik",
+    "name": "pulumi-kubernetes-traefik",
     "version": "0.0.1",
     "scripts": {
         "build": "tsc"
