--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "pulumi-kubernetes-traefik",
+    "name": "@adaosantos/pulumi-kubernetes-traefik",
     "repository": "https://github.com/adaosantos/pulumi-kubernetes-traefik.git",
     "version": "0.0.1",
     "scripts": {
         "build": "tsc"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com",
+        "access": "public"
     },
     "dependencies": {
         "@pulumi/pulumi": "^3.42.0"
