fix release trigger

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: release
 on:
   push:
-    branches:
-      - main
+    tags:
+      - v*.*.*
 jobs:
   publish_package:
     name: Publish Package
