--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-node_modules
-bin
+/vendor/
+**/bin/
+**/obj/
+**/node_modules/
+**/.vs
+**/.vscode
+**/.idea
+**/.ionide
+.pulumi
+Pulumi.*.yaml
+/provider/pkg/gen/openapi-specs
+/provider/cmd/pulumi-resource-kubernetes/schema.go
+/provider/cmd/pulumi-resource-kubernetes/schema-embed.json
+yarn.lock
+ci-scripts
+/nuget/
+**/.DS_Store
+.yarn
